test/io/sungeun/funcPtr5.good
funcPtr5.chpl:5: error: passing iterators by name is not yet supported
