test/io/sungeun/funcPtr5.chpl
iter blah() {
  yield 10;
}

writeln(blah); // missing parens and also this is weird
